# TARS

./: .gitignore  README.md  main.py
TARS/: Dockerfile  main.py  pyproject.toml
TARS/bot/: callbacks.py  handlers.py
TARS/config/: config.py
TARS/llm/: prompts.py  tools.py  utils.py
bot/: callbacks.py  handlers.py
llm/: conversations.py  prompts.py  tools.py  utils.py
